feat: reflective design page structure

--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Work Phase 3</title>
+    <title>Reflective Design - Work Phase 3</title>
 </head>
 
 <body>
-    <!-- START PAGE STRUCTURE -->
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">🖼️</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
             <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
@@ -35,11 +33,30 @@
         </ul>
     </nav>
 
+
+
     <main>
-        <h1>WP3 Home Page</h1>
+        <div class="container">
+            <div class="breadcrumbs-link">
+                <a href="style_guide.html">Style Guide</a> > <span class="active">Reflective Design</span>
+            </div>
+
+            <header class="m-b-8">
+                <h1 class="m-b-4 p-t-6">Reflective Design</h1>
+                <h3 class="m-b-6">
+                    This is the Reflective design aspect of the FeedCrumbs website
+                </h3>
+                <p class="m-b-8">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur molestias impedit distinctio
+                    corporis quia fugiat voluptas quidem velit nihil necessitatibus?
+                </p>
+            </header>
+
+            <section class="base-card m-b-12">
+
+            </section>
     </main>
-
-
+    <script type="module" src="js/reflective_design.js"></script>
 </body>
 
 </html>
