--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/components.css" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Visceral Design - Work Phase 3</title>
+    <title>Behavioural Design - Work Phase 3</title>
 </head>
 
 <body>
@@ -123,7 +123,7 @@ On creating the Card component, the WCAG principles of Meaningful Sequence is im
 
             </section>
 
-            <article class="form-section m-b-12">
+            <section class="form-section m-b-12">
                 <h3 class="m-b-6">Community Engagement Form</h3>
                 <p class="m-b-6">
                     To minimize errors, and make the users fill the form in the community form, the form implement the
@@ -230,7 +230,7 @@ On creating the Card component, the WCAG principles of Meaningful Sequence is im
                     <div id="form-feedback" class="form-feedback" role="status" aria-live="polite" aria-atomic="true">
                     </div>
                 </form>
-            </article>
+            </section>
             <div class="p-y-24"></div>
         </div>
     </main>
