feat: add values mapping

--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -53,7 +53,75 @@
             </header>
 
             <section class="base-card m-b-12">
+                <h3 class="m-b-6">Values Mapping</h3>
+                <table class="reflective-table">
+                    <thead>
+                        <tr>
+                            <th>Value</th>
+                            <th>Design Implication</th>
+                            <th>Specific Element</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Identity Representation</td>
+                            <td>The website shows people and community pridefully showing their true self.
+                                Annotation: Representation of both individualy and community is first step to
+                                build connections. Showing example contents that show people and communities proudly
+                                expressing themself, such as images of people showing their culture, tradition,
+                                and activities, will encourage users to also express themself and their authentic
+                                culture. By pridefully representing themself to others, the users basically open up
+                                themself to the communities, and naturally interactions, engagements, and connections
+                                will be built. But to accomplish this, people will have to feel safe and respected,
+                                therefore the second value below.
 
+                            </td>
+                            <td>Images of people who expressively shows their culture in the home page especially in
+                                the highlight section. Showcase of activities in the Highlight section, showing
+                                expressive activities from different events by the people/community. Also, in the
+                                communities page, similiar with the homepage, a call to actions for users to create/join
+                                communities and share their stories, ideas, experiences, like "Share your story together
+                                with us", "Establish connection through your voice", "Express yourself freely".
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Cultural Inclusivity</td>
+                            <td>Culturally different people and communities interact with each other,
+                                showing genuine compassion and tolerance.
+                                Annotation: In order to allow people freely express themself, and thereby build
+                                meaningful connections, people should first feel safe and respected, no matter their
+                                background, culture, origin, age etc. By maintaining a culturally inclusive design
+                                decisions in contents such as images, languages, tones, colours etc, people will feel
+                                more comfortable to express themself and build meaningful connections.
+                            </td>
+                            <td>In addition to people and communities who express themself, some images will also shows
+                                people from different culture, origin, ages etc, interacting with each other. There will
+                                be no stereotypical or "dominant" culture shown in the images, but rather a mix of
+                                different cultures interacting with each other. This will also be made in the
+                                Highlight section and "About Us" section, where there will be images of the team members
+                                and also community representatives from different background, culture, age etc.
+                            </td>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Meaningful Connections</td>
+                            <td>Add a feeling that the website "invite" users to connect with the diverse community
+                                within the website. Annotation: One of the main purpose of this website is to build
+                                connections, therefore the design should also feel like "inviting" users to connect with
+                                the community. This can be done by using inviting words, and images in home page and
+                                communities page.
+                            </td>
+                            <td>Welcome Message and buttons in the home page, especially in the header section to have
+                                an "inviting" message like "Join Us", "Share your story", "Connect with others from
+                                around the world" etc. In order to add a more personal touch, the welcome message
+                                language will change periodically (in several seconds) to reflect different
+                                cultures/languages around the world, such as "Join Us" - "Únete a nosotros" -
+                                "Rejoignez-nous" - "加入我们" - "Присоединяйтесь кнам", but appropriate translation will be
+                                provided in english below the text, like "Translate to: Join us 🇪🇸".
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
     </main>
     <script type="module" src="js/reflective_design.js"></script>
