feat: Identity, Emotional Tone, Imagery, and Languagxe

--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/component_skeletons/accordion.css" />
+
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <title>Reflective Design - Work Phase 3</title>
@@ -123,6 +125,101 @@
                     </tbody>
                 </table>
             </section>
+
+            <section class="accordion">
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Identity, Emotional Tone, Imagery, and Language</button>
+                    <div class="accordion-content">
+                        <p class="m-b-3">
+                            Based on everything we have created so far, I will create the website identity, emotional
+                            tone, imagery examples, and language & expression, in order to make users can see themself
+                            in the website.
+                        </p>
+                        <div class="accordion-item m-b-4">
+                            <button class="accordion-header">▷ Identity</button>
+                            <div class="accordion-content">
+                                <p>
+                                    I want to revolve the website identity around "An inclusive platform that foster
+                                    meaningful connections through self expression". There are three keywords, the first
+                                    is "Inclusive", which means the
+                                    website should be designed to be inclusive, so that people from different
+                                    background, will feel safe and respected in order to do the second keyword, "Self
+                                    Expression", which is the way for people to show their true self, and in this case,
+                                    expresing themself through their cultural cuisine, and by doing so, they can do the
+                                    third keyword, which is to create "meaningful connections" with other
+                                    people/community in the platform.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="accordion-item m-b-4">
+                            <button class="accordion-header">▷ Emotional Tone and Imagery Examples</button>
+                            <div class="accordion-content">
+                                <p>
+                                    In order to show the identity of the website, we will create emotial tone of
+                                    Proud, Welcoming, and Compassionate. Proud, is to encourage people to proudly
+                                    express their true self, Welcoming, is to invite people to join communities and
+                                    connect with people, and Compassionate, is to show genuine care and tolerance to
+                                    people from different background.
+
+                                    <br>
+                                    <br>
+
+                                    Here are some examples of imagery that can be used to reflect these emotional tones:
+
+                                    <br>
+                                    <br>
+                                    <img src="../work_phase_3/assets/imagery-1.png" class="small-responsive-img">
+                                    <br>
+                                    <br>
+                                    <img src="../work_phase_3/assets/imagery-2.webp" class="small-responsive-img">
+                                    <br>
+                                    <br>
+                                    <img src="../work_phase_3/assets/imagery-3.png" class="small-responsive-img">
+                                    <br>
+
+                                    As shown in the images above, the imagery aligned with the intended emotional tone
+                                    and identity we want to create. Several important aspects of the images is first,
+                                    there are diversity among the people shown in the images, in terms of culture, age,
+                                    and the cuisines variety. Also, warm colors in the image create a welcoming
+                                    atmosphere while also supported the proud face expression of the people
+                                    in the images, which is joyful and proud of their culture. Their eyes and body
+                                    language is also either directed to the camera, showing "inviting" vibes, or
+                                    directed to each other, showing genuine interactions and connections. Personally, my
+                                    favorite is the first image as it checklist all my intended emotional tone and
+                                    identity.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="accordion-item m-b-4">
+                            <button class="accordion-header">▷ Language & Expression and its relation to Imagery
+                                Used</button>
+                            <div class="accordion-content">
+                                <p>One example of homepage text that I will be using is "Express Yourself, and Connect
+                                    With the World" Through this message, I intend to straightforwardly invite users to
+                                    xpress themself in the website, then connect with other people.
+
+                                    <br>
+                                    <br>
+
+                                    In addition, to add a more "welcoming" vibe, I will add a short message of something
+                                    like "Join a community that celebrates culture and connection".
+
+                                    Below are some examples of how the text will look like in the homepage.
+                                </p>
+                                <br>
+                                <br>
+                                <img src="../work_phase_3/assets/with-text.png" class="small-responsive-img">
+                                <br>
+                                <br>
+                                <img src="../work_phase_3/assets/with-text-2.png" class="small-responsive-img">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <div class="p-y-16"></div>
     </main>
     <script type="module" src="js/reflective_design.js"></script>
 </body>
