feat: language reflection checklist

--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -214,6 +214,82 @@
                                 <img src="../work_phase_3/assets/with-text-2.png" class="small-responsive-img">
                             </div>
                         </div>
+                        <div class="accordion-item m-b-4">
+                            <button class="accordion-header">▷ Language Reflection Checklist</button>
+                            <div class="accordion-content">
+                                <p>In order to make sure that the language that we are going to use will not
+                                    disrespect or offend any culture, I will make a checklist that refers to the
+                                    Australian Government style manual for inclusive language, and also my own
+                                    values and user needs. Here is the checklist:
+                                </p>
+
+                                <br>
+                                <br>
+
+                                <ul>
+                                    <li>
+                                        Use specific nation/community names when possible (for example "Yawuru
+                                        people" not just "Aboriginal people")
+
+                                        This also reflect on User Need 1 and 2 in Value 1, Identity Representation,
+                                        where users want to see autenthic representation of their own culture and
+                                        community.
+                                    </li>
+                                    <br>
+                                    <li>
+                                        In Lores (Wiki) content, consult with community representatives before
+                                        publishing
+                                    </li>
+                                    <br>
+                                    <li>
+                                        For CrumbsMap overlay layers, work with community representatives to ensure
+                                        accurate representation of Indigenous lands and other historical sites.
+                                    </li>
+                                    <br>
+                                    <li>
+                                        Refer to Australian as "Australians", not "migrants" or "foreigners"
+                                    </li>
+                                    <br>
+                                    <li>
+                                        Use "they/them" as default gender neutral pronouns
+                                    </li>
+                                    <br>
+                                    <li>
+                                        In Event descriptions (OZvents), use "Participants" or "attendees" not gendered
+                                        terms
+                                    </li>
+                                    <br>
+                                    <li>
+                                        Only mention age when relevant
+                                    </li>
+                                    <li>
+                                        Avoid terms like "myth," "legend," "folklore" when referring to spiritual
+                                        beliefs especially I wil have Lores (Wiki) content.
+                                    </li>
+                                </ul>
+                                <br>
+                                <br>
+
+                                Original Example Text:
+                                <br>
+
+                                "Express Yourself, and Connect With the World"
+                                "Join a community that celebrates culture and connection"
+                                <br>
+
+                                Revised Example Text:
+                                <br>
+
+                                "Express Yourself, and Connect With the World"
+                                "Join communities that celebrate culture and connection"
+
+                                <br>
+                                Annotation: In the revised text, I changed "a community" to "communities" to
+                                reflect the inclusivity of different cultures and communities, and also to avoid
+                                the implication that there is only one community that users can join.
+
+                            </div>
+                        </div>
                     </div>
 
                 </div>
